<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:background="@color/colorPrimary"
    tools:context=".CommittingPersonActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_material_light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/committing_person_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/committing_person_1"/>
            <TextView
                android:id="@+id/committing_person_textView_cmd_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="monospace"
                android:text="@string/committing_person_cmd_1"/>
            <TextView
                android:id="@+id/committing_textView1_obs_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                android:text="@string/committing_person_1_obs_1"/>
            <TextView
                android:id="@+id/committing_person_textView_cmd_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="monospace"
                android:text="@string/committing_person_cmd_2"/>
            <TextView
                android:id="@+id/committing_textView1_obs_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                android:text="@string/committing_person_1_obs_2"/>
            <TextView
                android:id="@+id/committing_person_textView1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/committing_person_1_1"/>
            <TextView
                android:id="@+id/committing_person_textView_cmd_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="monospace"
                android:text="@string/committing_person_cmd_3"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>