<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SplashActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/thing1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/thing_1"
                android:lineSpacingMultiplier="1.25"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/abc_text_size_title_material"
                android:background="@color/material_deep_teal_500"
                android:textColor="@color/material_white"/>
            <Button
                android:id="@+id/thing2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/thing_2"
                android:lineSpacingMultiplier="1.25"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/abc_text_size_title_material"
                android:background="@color/material_deep_purple_400"
                android:textColor="@color/material_white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/thing3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/thing_3"
                android:lineSpacingMultiplier="1.25"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/abc_text_size_title_material"
                android:background="@color/material_pink_500"
                android:textColor="@color/material_white"/>
            <Button
                android:id="@+id/thing4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/thing_4"
                android:lineSpacingMultiplier="1.25"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/abc_text_size_title_material"
                android:background="@color/material_amber_800"
                android:textColor="@color/material_white"/>
        </LinearLayout>
        <Button
            android:id="@+id/thing5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/thing_5"
            android:lineSpacingMultiplier="1.25"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/abc_text_size_title_material"
            android:background="@color/material_indigo_500"
            android:textColor="@color/material_white"/>
    </LinearLayout>
</LinearLayout>